fix: columns-gap and clear filter button

--- a/css/products.css
+++ b/css/products.css
@@ -49,7 +49,7 @@
     cursor: pointer;
     position: absolute;
     top: 0;
-    right: 20px;
+    right: 0;
 }
 
 .aside-hamburger .material-icons {
@@ -99,10 +99,14 @@ align-items: center;
 
 .clear-all-filters{
     cursor: pointer;
+    color: var(--white);
+    background: var(--logo-color);
+    outline: 1px solid black;
+    padding: 4px 8px;
 }
 
 .clear-all-filters:hover{
-    color: var(--logo-color);
+    transform: scale3d(1.3, 1.3, 1.3);
 }
 
 /* main-content*/
@@ -201,8 +205,4 @@ align-items: center;
         transform: translateX(0);
     }
 
-    .cards-container .card{
-        margin: 0;
-    }
-
-}
+}   
